Fix current playlist and sidebar z-index

--- a/src/client/styles/components/_current-playlist.sass
+++ b/src/client/styles/components/_current-playlist.sass
@@ -6,6 +6,7 @@
   height: 270px
   background-color: $white
   box-shadow: -6px -4px 15px -2px rgba($black, 0.75)
+  z-index: 2
 
   #playlist
     position: absolute
